# iris-opencti-module

./: .gitignore  LICENSE  README.md  buildnpush2iris.sh  code_review_report.md  pyproject.toml  requirements.txt
iris_opencti_module/: IrisOpenCTIConfig.py  IrisOpenCTIInterface.py  __init__.py
iris_opencti_module/opencti_handler/: attribute_setup.py  enrichment_renderer.py  ioc_type_mapping.py  opencti_client.py  opencti_handler.py
iris_opencti_module/tests/: conftest.py  test_handler.py  test_integration.py  test_interface.py  test_ioc_mapping.py  test_opencti_client.py
scripts/: seed_opencti_testdata.py  validate_mappings.py
